[build-system]
requires = [""]
build-backend = ""

[project]
name = "project-a-series-of-tubes"
version = "0.9"
description = "Computer Networks Programming Project."
authors = [
    { name = "Yiming Li", email = "yl5436@columbia.edu" },
    { name = "Cristopher Marte Marte", email = "cjm2301@columbia.edu" },
    { name = "Ryan Najac", email = "rdn2108@columbia.edu" },
    { name = "Jason P'ng", email = "jp4361@columbia.edu" }
]
# license = { text = "MIT License" }
readme = "README.md"
requires-python = ">=3.8, <4"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Topic :: Computer Networks :: Blockchain",
]
keywords = [
    "blockchain",
    "peer-to-peer",
    "p2p",
    "distributed",
    "decentralized",
]
dependencies = [
    "flask",
]

[project.urls]
homepage = "https://github.com/csee4119-spring-2024/project-a-series-of-tubes"

[tool.ruff]
line-length = 120

